# CAMP3D

./: .gitignore  README.md  RELEASE.md  TESTING.md  run_full_pipeline.sh  test_camp3d.py  test_pipeline.sh
camp3d-0.1.0/: README.md  pyproject.toml  test_camp3d.py
camp3d-0.1.0/examples/: quickdemo_config.yaml
camp3d-0.1.0/examples/addons/: Blender2Helios.py
camp3d-0.1.0/examples/materials/: spread.mtl  spread_leafwood.mtl
camp3d-0.1.0/examples/scenes/quickdemo/: README.md  quickdemo_trees.fbx
camp3d-0.1.0/src/camp3d/: __init__.py  __main__.py  blender_exec.py  cli.py  config.py  pipeline.py  tools.py
camp3d-0.1.0/src/camp3d/resources/blender_scripts/: scene_create.py  scene_customise_semantics.py  scene_export.py
camp3d-0.1.0/src/camp3d/stages/: create.py  doctor.py  export.py  plan.py  postprocess.py  semantics.py  stats.py  survey.py  tiling.py
